fixed color input overlap

--- a/client/src/OrderForm3.css
+++ b/client/src/OrderForm3.css
@@ -45,5 +45,5 @@
     height: 150px;
     width: 150px;
     border-radius: 2rem;
-    filter: brightness(60%);
+    filter: grayscale(100%);
 }
