--- a/client/src/OrderForm4.css
+++ b/client/src/OrderForm4.css
@@ -61,7 +61,7 @@
     width: 100px;
     border-radius: 2rem;
     margin: 0.5rem;
-    filter: brightness(60%);
+    filter: grayscale(100%);
 }
 
 .small-square-button-4 {
